--- a/static/scss/sheda.scss
+++ b/static/scss/sheda.scss
@@ -1,676 +1,48 @@
-@import 'null';
-@import 'fonts';
-@import 'log-in';
-
-// ==================BODY========================
-
-body {
-    font-family: "Alegreya";
-    font-size: 22px;
-    background-color: #FFFAFB;
-}
-
-.wrapper {
-    overflow: hidden;
-
-    // .wrapper__container
-    &__container {}
-}
-
-[class*=__container] {
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 1.25rem;
-
-    @media (min-width: 600px) {
-        padding: 0 3.25rem;
-    }
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-// ==================Links========================
-
-a {
-    text-decoration: none;
-    background-image: linear-gradient(#FF2625, #FF2625);
-    background-position: 0% 100%;
-    background-repeat: no-repeat;
-    background-size: 0% 2px;
-    transition: background-size .3s;
-}
-
-.link:hover {
-    background-size: 100% 2px;
-}
-
-.link-red {
-    color: #FF2625;
-}
-
-// ==================LOGO========================
-.logo {
-    width: 100px;
-    display: block;
-    overflow: hidden;
-    border-radius: 50%;
-    position: relative;
-}
-
-.logo img {
-    width: 100%;
-    height: auto;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    transform: scale(1);
-}
-
-.logo img:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-}
-
-
-
-// ==================TITLES========================
-
-.titles-main {
+.title_schede {
     display: flex;
-    flex-direction: column;
-    gap: 40px;
-
-
-    @media (min-width: 1150px) {
-        max-width: 472px;
-    }
-
-    // .titles-main__subTitle
-    &__subTitle {
-        color: #FF2625;
-        font-size: 26px;
-        font-weight: 600;
-
-    }
-
-    // .titles-main__title
-    &__title {
-        font-family: "Josefin Sans";
-        font-size: 40px;
-        font-weight: 700;
-        line-height: 110%;
-
-        @media (max-width: 1150px) {
-            text-align: center;
-        }
-
-        @media (min-width: 600px) {
-            font-size: 80px;
-        }
-
-        @media (min-width: 400px) {
-            font-size: 60px;
-        }
-    }
-
-    // .titles-main__text
-    &__text {
-        font-weight: 100;
-        text-align: justify;
-    }
-}
-
-// =================BUTTONS=========================
-
-.btn {
-    position: relative;
-    width: 180px;
-    padding: 20px 30px;
-    font-weight: 600;
-    font-size: 18px;
-
-    cursor: pointer;
-    background: transparent;
-    border: 1px solid #91C9FF;
-    outline: none;
-    transition: 1s ease-in-out;
-
-    @media (max-width: 500px) {
-        max-width: 100%;
-    }
-
-
-    // .btn__red
-    &__red {
-        background-color: #FF2625;
-        color: white;
-    }
-
-    // .btn__white
-    &__white {
-        border: #91C9FF 1px solid;
-    }
-}
-
-svg {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    fill: none;
-    // width: 100%;
-    // background-color: #FF2625;
-    stroke: #fff;
-    stroke-dasharray: 150 480;
-    stroke-dashoffset: 150;
-    transition: 1s ease-in-out;
-}
-
-.btn:hover {
-    transition: 1s ease-in-out;
-    background: #4F95DA;
-    color: white;
-    border: 1px solid #91C9FF;
-}
-
-
-.btn:hover svg {
-    stroke-dashoffset: -480;
-}
-
-.btn span {
-    font-size: 18px;
-    font-weight: 100;
-}
-
-
-// ================Header==========================
-
-.header {
-
-    // .header__container
-    &__container {
-        padding: 0 0;
-    }
-
-
-    // margin-bottom: 50px;
-    background-color: #FFF3F4;
-
-    // .header__menu
-    &__menu {}
-
-    @media (max-width: 900px) {
-        padding: 0px 0;
-    }
-}
-
-.menu {
-
-    display: flex;
-    font-size: 24px;
-
-    @media (max-width: 900px) {
-        justify-content: space-between;
-    }
-
-    // .menu__logo
-    &__logo {
-        margin-right: 75px;
-    }
-
-    // .menu__items
-    &__items {
-        display: flex;
-        align-items: center;
-        gap: 60px;
-        flex-grow: 1;
-
-        @media (max-width: 900px) {
-            display: none;
-        }
-    }
-
-    // .menu__item
-    &__item {
-        position: relative;
-    }
-
-    // .menu__burger
-    &__burger {
-        align-self: center;
-
-        img {
-            max-width: 40px;
-            height: auto;
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-            transform: scale(1);
-        }
-
-        img:hover {
-            cursor: pointer;
-            transform: scale(1.1);
-        }
-    }
-}
-
-
-// ================MAIN==========================
-
-.main {
-
-    // .main__block
-    &__block {}
-}
-
-// ================Section BLOCK MAIN==========================
-.block-main {
-    position: relative;
-
-    // .block-main__container
-    &__container {
-        margin-top: 60px;
-
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 10px 170px 10px;
-        gap: 50px;
-
-        @media (max-width: 1150px) {
-            flex-direction: column;
-            padding: 0px 10px 150px 10px;
-        }
-
-    }
-
-    // .block-main__titles
-    &__titles {}
-
-    // .block-main__buttons
-    &__buttons {
-        max-width: 100%;
-        display: flex;
-        gap: 45px;
-
-        @media (max-width: 1150px) {
-            align-self: center;
-        }
-
-        @media (max-width: 500px) {
-            flex-direction: column;
-        }
-
-    }
-
-    // .block-main__image
-    &__image {
-
-        @media (min-width: 1150px) {
-            position: relative;
-            padding-top: 56.25%;
-            width: 100%;
-
-        }
-
-        img {
-            max-width: 100%;
-            max-height: 1000px;
-            object-fit: scale-down;
-            border-radius: 5px 5px 5px 35px;
-
-            @media (min-width: 1150px) {
-                position: absolute;
-                bottom: -60px;
-                left: 50px;
-                width: 100%;
-                height: auto;
-                z-index: -2;
-            }
-        }
-    }
-
-}
-
-.block-main__image::after {
-    content: url("../img/ico/Dots.svg");
-    bottom: -80px;
-    right: 0px;
-    position: absolute;
-
-    @media (max-width: 1150px) {
-        bottom: 75px;
-        right: 50px;
-    }
-
-    @media (max-width: 600px) {
-        content: "";
-    }
-}
-
-.block-main__container::before {
-    content: url("../img/main/mainBlock/quadrati.png");
-    top: 0px;
-    left: -150px;
-    position: absolute;
-}
-
-.block-main__container::after {
-
-    @media (min-width: 800px) {
-        content: 'Exercise';
-        font-family: "Josefin Sans";
-        font-weight: 900;
-        font-size: 200px;
-        bottom: -50px;
-        left: 20px;
-        position: absolute;
-        line-height: 170%;
-        z-index: -2;
-        max-width: 100%;
-        color: hsla(0, 100%, 57%, 0.05);
-    }
-}
-
-// ================Section STEP BY STEP==========================
-.main {
-
-    // .main__StepByStep
-    &__StepByStep {}
-}
-
-.block-StepByStep {
-    background-color: #FFF3F4;
-
-    // .block-StepByStep__container
-    &__container {
-        display: flex;
-        flex-direction: column;
-        padding: 40px 10px 120px 10px;
-
-        @media (max-width: 900px) {
-            padding: 40px 10px 90px 10px;
-        }
-    }
-
-    // .block-StepByStep__titles
-    &__titles {
-        align-self: center;
-        padding: 40px 0;
-
-        .titles-main__subTitle {
-            text-align: center;
-        }
-    }
-
-    // .block-StepByStep__cards
-    &__cards {}
-}
-
-.titles-main {
-
-    // .titles-main__subTitle
-    &__subTitle {}
-
-    // .titles-main__title
-    &__title {}
-}
-
-.cards-services {
-    // display: flex;
-    // justify-content: space-between;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 50px;
-
-    @media (max-width: 900px) {
-        grid-template-columns: 1fr;
-    }
-}
-
-.card-service {
-    // max-width: 300px;
-    background-color: #fff;
-    border-radius: 5px 5px 5px 35px;
-    border: #ff25258a 1px solid;
-    padding: 65px 35px;
-
-    @media (max-width: 400px) {
-        padding: 35px 15px;
-    }
-
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-
-    // .card-service__image
-    &__image {
-        text-align: center;
-
-        img {
-            width: 75px;
-
-        }
-    }
-
-    // .card-service__title
-    &__title {
-        font-size: 24px;
-        font-weight: 800;
-        text-align: center;
-        height: 50px;
-    }
-
-    // .card-service__text
-    &__text {
-        text-align: justify;
-    }
-}
-
-// ================Section benefits==========================
-
-.main {
-
-    // .main__benefits
-    &__benefits {}
-}
-
-.block-benefits {
-
-    // .block-benefits__container
-    &__container {
-        padding: 40px 10px 170px 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
-    }
-}
-
-
-.banefit-card {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 90px;
-    justify-content: end;
-    // align-content: end;
-    // justify-content: end;
-
-    @media (max-width: 900px) {
-        grid-template-columns: 1fr;
-    }
-
-    // .banefit-card__image
-    &__image {
-        text-align: center;
-
-        img {
-            max-width: 100%;
-        }
-    }
-
-    // .banefit-card__titles
-    &__titles {
-        align-self: center;
-        max-width: 100%;
-
-
-
-        .titles-main__subTitle {
-            font-size: 26px;
-
-            @media (max-width: 1150px) {
-                text-align: center;
-            }
-        }
-
-        .titles-main__title {
-            font-size: 44px;
-
-
-            @media (max-width: 900px) {
-                font-size: 38px;
-            }
-
-            @media (max-width: 400px) {
-                font-size: 28px;
-            }
-        }
-    }
-}
-
-.text-align-right {
-    text-align: end;
-}
-
-.brRadiusBottomRight {
-    img {
-        border-bottom-right-radius: 100px;
-    }
-}
-
-.brRadiusBottomLeft {
-    img {
-        border-bottom-left-radius: 100px;
-    }
-}
-
-.brRadiusTopRight {
-    img {
-        border-top-right-radius: 100px;
-    }
-}
-
-.brRadiusTopLeft {
-    img {
-        border-top-left-radius: 100px;
-    }
-}
-
-.cntChangeBlock {
-
-    .left {
-        order: 1;
-
-        @media (max-width: 900px) {
-            order: 2;
-        }
-    }
-
-    .right {
-        order: 2;
-
-        @media (max-width: 900px) {
-            order: 1;
-        }
-    }
-}
-
-
-// ================footer==========================
-.footer {}
-
-
-
-.footer {
-    background-color: #FFF3F4;
-    padding: 10px 0 25px 0;
-    text-align: center;
-
-    // .footer__container
-    &__container {
-        padding: 0;
-        display: grid;
-        grid-template-columns: 150px 1fr;
-        align-items: center;
-    }
-
-    // .footer__logo
-    &__logo {
-        // align-self: center;
-        text-align: center;
-        width: 100px;
-        display: block;
-        overflow: hidden;
-        border-radius: 50%;
-        position: relative;
-    }
-
-    // .footer__topText
-    &__topText {
-        color: #A69B9B;
-        font-size: 22px;
-    }
-
-    // .footer__bottomText
-    &__bottomText {
-        font-size: 14px;
-    }
-}
-
-.social-contacts {
-    width: 100%;
-    display: flex;
-    gap: 10px;
-    align-items: center;
     justify-content: center;
-
-    a {
-        display: block;
-
-        img {
-            width: 30px;
-        }
-    }
 }
 
-.footer__icons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    grid-row: 1 / span 2;
+.btn_modal {
+    background: #FF2625;
+    width: auto;
+    display: block;
+    margin: 30px;
 }
 
-.img_account {
-    width: 200px !important;
-    height: 200px;
+.dettagli {
+    width: fit-content;
+    right: 5px;
 }
 
-.img_container {
-    display: flex;
-    justify-self: start;
-    width: 200px;
-    height: 200px;
+.contenuto {
+    width: max-content;
 }
 
-.acc {
-    background-color: #FF2625;
-    display: flex;
-    align-items: center;
+.modal_container {
+    display: table;
+}
+
+.modal_box {
+    width: 1000px;
+    height: 639px;
+}
+
+table,
+th,
+td {
+    border: 0.5px solid black;
+}
+
+.ex_name {
+    margin: 0;
+}
+
+.row {
+    border: none;
+}
+
+.title_modal {
+    display: inline;
     justify-content: space-around;
-}
-
-.info {
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
-
 }
