fix name for json object

--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div id="link_sing-in">
-          <span>Non hai un account? </span><a class="link" href="sign-in.html#logo_log-in"><span
+          <span>Non hai un account? </span><a class="link" href="register"><span
               class="color-red ">Registrati</span></a>
         </div>
         <div class="col-auto container btn_log-in" id="btn_accedi">
