--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -45,7 +45,7 @@
                     <div class="account__image">
                         <img src="../static/img/ico/account_img.png" alt="account image">
                     </div>
-                    <form class="container col-5 " id="container-form">
+                    <form class="container col-5 " id="container-form" action="/account" method="post">
                         <div class="col-auto">
                             <div class="col-8 col2">
                                 <div class="col-8">
@@ -77,7 +77,7 @@
                             </div>
                             <div class="col-8">
                                 <label for="inputPassword6" class="col-form-label">Password</label>
-                                <input type="password" id="inputPassword" maxlength="20" minlength="8"
+                                <input type="password" id="inputPassword" name="inputPassword" maxlength="20" minlength="8"
                                     class="form-control" aria-describedby="passwordHelpInline"
                                     value="{{athlete.password}}">
                                 <span class="material-symbols-outlined visibility_account" type="button"
