--- a/templates/schede.html
+++ b/templates/schede.html
@@ -10,8 +10,8 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/log-in.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/log-in.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="icon" href="/static/img/logo/logoRed.ico">
@@ -48,25 +48,29 @@
     </button>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade modal-dialog-scrollable" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal_container">
             <div class="modal-content modal_box">
-                <div class="modal-header">
-                    <h1 class="modal-title title_modal fs-5" id="exampleModalLabel"> Nome scheda: <!--nome scheda-->
-                        Data creazione: <!--nome scheda--> </h1>
+                <div class="modal-header info_scheda">
+                    <h1 class="modal-title title_modal fs-5" id="exampleModalLabel"> Nome scheda: {{.name}} </h1>
+                    <h1 class="modal-title title_modal fs-5" id="exampleModalLabel">Data Creazione:22/11/2222
+                        <!--Data creazione scheda-->
+                    </h1>
                 </div>
-                <div class="modal-body">
-                    <table>
+
+                <div class="modal-body container_modal_body">
+                    <table class="modal_table">
                         <tr class="col">
-                            <th> </th>
+                            <th>Esercizio</th>
                             <th>Serie (N°)</th>
                             <th>Ripetizioni (N°)</th>
                             <th>Carico (KG)</th>
                             <th>Ripresa (sec)</th>
-                            <th>Durata Eesercizio (Tempo)</th>
+                            <th>Durata Esercizio (Tempo)</th>
                         </tr>
                         <tr class="col">
-                            <th class="row ex_name">Pesi</th>
+                            <th class="row exercise_name">Pesi</th>
                             <td>ciao</td>
                             <td>Germany</td>
                             <td>Germany</td>
@@ -74,7 +78,135 @@
                             <td>ciao</td>
                         </tr>
                         <tr class="col">
-                            <th class="row ex_name">Pesi</th>
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
+                            <td>ciao</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>Germany</td>
+                            <td>ciao</td>
+                        </tr>
+                        <tr class="col">
+                            <th class="row exercise_name">Pesi</th>
                             <td>ciao</td>
                             <td>Germany</td>
                             <td>Germany</td>
@@ -83,9 +215,11 @@
                         </tr>
                     </table>
                 </div>
-                <div class="commento">
+                <div class="commento container">
                     <h2>Commento</h2>
-                    <p></p>
+                    <p class="p_commento">
+                        RPE7 nell'ultima serie di panca reale. 1 ripetizione in meno sul top set di legextension
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary btn_modal" data-bs-dismiss="modal">Close</button>
