change style of page shede

--- a/static/css/log-in.css
+++ b/static/css/log-in.css
@@ -1,26 +1,3 @@
-.wrapper_account {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.main__log-in {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 .log-in {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,9 +10,6 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 .log-in .logo {
   width: 44px;
@@ -63,6 +37,38 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.access_text {
+  font-size: 44px;
+  font-weight: 700;
+}
+
+.color-red {
+  color: #FF2625;
+}
+
+.container {
+  margin: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+.container * {
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 100%;
+}        flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
