--- a/templates/schede.html
+++ b/templates/schede.html
@@ -12,6 +12,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/log-in.css">
+    <link rel="stylesheet" href="../static/css/sheda.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="icon" href="/static/img/logo/logoRed.ico">
@@ -31,7 +32,8 @@
                     <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
                 </ul>
                 <div class="menu__burger">
-                    <a href="login"><img src="../static/img/ico/login.png" alt="menu"></a>
+                    <a href="account"><span class="link_account">My account</span><img src="../static/img/ico/login.png"
+                            alt="menu"></a>
                 </div>
             </menu>
         </div>
@@ -44,7 +46,8 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary  btn_modal" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Nome scheda:
+        <span>Nome scheda: {{.name}} </span>
+        <span>Data Creazione: {{.data_sheda}}</span>
     </button>
 
     <!-- Modal -->
@@ -53,7 +56,7 @@
         <div class="modal-dialog modal_container">
             <div class="modal-content modal_box">
                 <div class="modal-header info_scheda">
-                    <h1 class="modal-title title_modal fs-5" id="exampleModalLabel"> Nome scheda: {{.name}} </h1>
+                    <h3 class="modal-title title_modal fs-5" id="exampleModalLabel"> Nome scheda: {{.name}} </h3>
                     <h1 class="modal-title title_modal fs-5" id="exampleModalLabel">Data Creazione:22/11/2222
                         <!--Data creazione scheda-->
                     </h1>
