--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -28,7 +28,7 @@
                     <ul class="menu__items">
                         <li class="menu__item"><a class="link" href="index">Casa</a></li>
                         <!-- <li class="menu__item"><a class="link" href="my_account.html">Il Mio Account</a></li> -->
-                        <li class="menu__item"><a class="link" href="index#dreamTeam">Chi Siamo</a></li>
+                        <li class="menu__item"><a class="link" href="showcards">Schede</a></li>
                         <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
                     </ul>
                     <div class="menu__burger">
@@ -77,8 +77,8 @@
                             </div>
                             <div class="col-8">
                                 <label for="inputPassword6" class="col-form-label">Password</label>
-                                <input type="password" id="inputPassword" name="inputPassword" maxlength="20" minlength="8"
-                                    class="form-control" aria-describedby="passwordHelpInline"
+                                <input type="password" id="inputPassword" name="inputPassword" maxlength="20"
+                                    minlength="8" class="form-control" aria-describedby="passwordHelpInline"
                                     value="{{athlete.password}}">
                                 <span class="material-symbols-outlined visibility_account" type="button"
                                     onclick="showPwd()" value="Mostra/nascondi password">
