resolved pagina scheda

--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -26,7 +26,7 @@
                         <a href="index"><img src="../static/img/logo/logo.png" alt="logo"></a>
                     </div>
                     <ul class="menu__items">
-                        <li class="menu__item"><a class="link" href="index">Casa</a></li>
+                        <li class="menu__item"><a class="link" href="index">Home</a></li>
                         <!-- <li class="menu__item"><a class="link" href="my_account.html">Il Mio Account</a></li> -->
                         <li class="menu__item"><a class="link" href="showcards">Schede</a></li>
                         <!-- <li class="menu__item"><a class="link" href="#">Contatti</a></li> -->
